# vscode-wit

./: .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .vscodeignore  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  commitlint.config.js  esbuild.mjs  esbuild.mts  eslint.config.mjs  extension.ts  info.plist  language-configuration.json  package-lock.json  package.json  prettier.config.mjs  snippets.json  test-runtime-error.js  tsconfig.json  vitest.config.ts
.github/: copilot-instructions.md  release-please-config.json  release-please-manifest.json  release-please.yml
.github/instructions/: wit-bindgen.instructions.md  wit-grammar.instructions.md  wit-parser.instructions.md
.github/workflows/: ci.yml  commit-message-lint.yml  release-please.yml  release.yml  stale.yml
images/: README.md
samples/: .gitignore  Cargo.toml  README.md  build.sh
samples/adder/: Cargo.toml
samples/adder/src/: lib.rs
samples/adder/wit/: world.wit
samples/counter/: Cargo.toml
samples/counter/src/: lib.rs
samples/counter/wit/: world.wit
samples/greeter/: Cargo.toml
samples/greeter/src/: lib.rs
samples/greeter/wit/: world.wit
scripts/: build-wasm.sh  format-test-wit-files.js  setup-wasm.sh  update-wasm-tools-version.sh
src/: bindingsSource.ts  errorParser.ts  extension.ts  formatter.ts  hostBindingsRouting.ts  jsBindings.ts  lib.rs  main.rs  node-polyfills.js  validator.ts  wasmDetection.ts  wasmUtils.ts  witValidator.ts
src/handler/: capabilities.rs  linter.rs  mod.rs
src/handler/wit/: consts.rs  mod.rs  token.rs
src/handler/wit/docs/: func.md  identifier.md  interface.md  mod.rs  package.md  record.md  type.md  use.md  wit.md  world.md
syntaxes/: wit.tmLanguage.json
tests/: bindings-generation.test.ts  bindingsSource.test.ts  build-resources.test.ts  commands.test.ts  errorParser.test.ts  formatter-edge.test.ts  formatter-idempotent.test.ts  formatter.test.ts  hostBindingsRouting.test.ts  import-resolution.test.ts  js-bindings.test.ts  navigator-polyfill.test.ts  sized-lists.test.ts  validator-methods.test.ts  validator.test.ts  wasmDetection-fs.test.ts  wasmDetection.test.ts  wasmUtils.test.ts  witValidator.test.ts
tests/grammar/: interface.wit  world.wit
tests/grammar/integration/: allow-unused.wit  allow-unused.wit.snap  char.wit.snap  conventions.wit.snap  empty.wit.snap  enum-has-go-keyword.wit  enum-has-go-keyword.wit.snap  error-context.wit.snap  feature-gates.wit  feature-gates.wit.snap  flags.wit.snap  floats.wit.snap  fully-qualified-java-address.wit  fully-qualified-java-address.wit.snap  futures.wit.snap  go_params.wit  go_params.wit.snap  guest-name.wit.snap  import-and-export-resource-alias.wit.snap  import-and-export-resource.wit.snap  import-export-same-func.wit.snap  import-func.wit.snap  import_export_func.wit.snap  integers.wit.snap  interface-has-go-keyword.wit  interface-has-go-keyword.wit.snap  issue544.wit  issue544.wit.snap  issue551.wit  issue551.wit.snap  issue573.wit  issue573.wit.snap  issue607.wit  issue607.wit.snap  issue668.wit.snap  issue929-no-export.wit  issue929-no-export.wit.snap  issue929-no-import.wit  issue929-no-import.wit.snap  issue929-only-methods.wit  (+72 more)
tests/grammar/issue-121/wit/: a.wit  b.wit
tests/grammar/unit/: basic-feature-gates.wit  feature-gates-test.wit  interface.wit  lists.wit  world.wit
wit/: deps.toml  image.wit  shape.wit  world.wit
wit-bindgen-wasm/: .gitignore  Cargo.toml  README.md  build.rs  create_component.sh
wit-bindgen-wasm/src/: lib.rs
wit-bindgen-wasm/wit/: wit-bindgen.wit
