[package]
name = "wit-bindgen-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly component wrapper for wit-bindgen"
license = "Apache-2.0 WITH LLVM-exception"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.54", default-features = false, features = ["macros", "realloc"] }
serde_json = "1.0"
wasmparser = { version = "0.245", features = ["component-model"] }
wit-parser = "0.245"
wit-bindgen-core = "0.54"
wit-bindgen-c = "0.54"
wit-bindgen-cpp = "0.54"
wit-bindgen-rust = "0.54"
wit-bindgen-go = "0.54"
wit-bindgen-csharp = "0.54"
wit-bindgen-moonbit = "0.54"
wit-bindgen-markdown = "0.54"
wit-component = "0.245"
anyhow = "1.0.102"

[build-dependencies]
toml = "1.0.7"

[profile.release]
opt-level = "s"
